--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-yt-dlp = "^2025.06.30"
-dukpy = "^0.4.0"
+yt-dlp = ">=2025.06.30"
+dukpy = ">=0.5.0"
 
 [[tool.poetry.packages]]
 include = "yt_dlp_plugins"
